karnc/tests/fixtures/negative/114_cron_bad_return/src/svc.karn
context svc

service sweeper {
  on cron("*/5 * * * *") () -> Effect[Result[Int, String]] {
    Ok(5)
  }
}
